# openfisca-ai

./: .cursorrules  .gitignore  AI_AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LEARNING_LOG.md  LICENSE  README.md  SHARING.md  TUNISIA_VALIDATION_REPORT.md  agent_security.md  pyproject.toml  validation_output.txt
.claude/: settings.json
.codex/: resume.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.gitlab/issue_templates/: bug.md  feature.md
.gitlab/merge_request_templates/: default.md
config/: README.md  setup.py  test_config.py  user.example.yaml  user.yaml.template
config/countries/: README.md  _example.yaml  _schema.yaml  tunisia.yaml
docs/: country-workflow.md  policyengine-claude-agents.md
docs/agents/: PRINCIPLES_UNIVERSELS_FINAUX.md  README.md  UNIVERSAL_PRINCIPLES_VALIDATION.md
docs/setup/: local-configuration.md
src/openfisca_ai/: __init__.py  cli.py  guide.py  (+1 more)
tasks/: example_task.json
tests/: __init__.py  test_artifacts.py  test_audit_country_package.py  test_check_package_baseline.py  test_check_tooling.py  test_cli.py  test_config_loader.py  test_extract_patterns.py  test_generate_code.py  test_generate_test_from_trace.py  test_guide.py  test_pipeline.py  test_scaffold_report.py  test_suggest_units.py  test_validate_code.py  test_validate_parameters.py  test_validate_tests.py  test_validate_units.py  tool_test_helpers.py
tools/: README.md  audit_country_package.py  check_tooling.py  extract_patterns.py  generate_test_from_trace.py  suggest_units.py  validate_code.py  validate_parameters.py  validate_units.py
(+84 files in other folders)
