[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openfisca-ai"
version = "0.1.0"
description = "AI-powered pipeline from legislation to OpenFisca code"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "OpenFisca" }
]
keywords = ["openfisca", "legislation", "ai", "tax", "benefits"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
openfisca-ai = "openfisca_ai.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
openfisca_ai = ["resources/**/*.md", "resources/**/*.yaml", "resources/**/*.yml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
